Bug 171994 - [WKWebsiteDataStore removeDataOfTypes:...] doesn't work for IndexedDB if the data store has a custom IDB path
Summary: [WKWebsiteDataStore removeDataOfTypes:...] doesn't work for IndexedDB if the ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Brady Eidson
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2017-05-11 15:07 PDT by Brady Eidson
Modified: 2017-05-12 09:27 PDT (History)
5 users (show)

See Also:


Attachments
Patch (14.96 KB, patch)
2017-05-11 15:13 PDT, Brady Eidson
no flags Details | Formatted Diff | Diff
Patch (15.02 KB, patch)
2017-05-11 16:26 PDT, Brady Eidson
no flags Details | Formatted Diff | Diff
Patch (15.16 KB, patch)
2017-05-11 16:44 PDT, Brady Eidson
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Brady Eidson 2017-05-11 15:07:54 PDT
[WKWebsiteDataStore removeDataOfTypes:...] doesn't work for IndexedDB if the data store has a custom IDB path

<rdar://problem/30612463>
Comment 1 Brady Eidson 2017-05-11 15:13:34 PDT
Created attachment 309794 [details]
Patch
Comment 2 Maureen Daum 2017-05-11 15:57:27 PDT
Comment on attachment 309794 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=309794&action=review

> Source/WebKit2/UIProcess/WebProcessPool.cpp:526
> +        m_databaseProcess->send(Messages::DatabaseProcess::InitializeWebsiteDataStore(parameters), 0);

If there is a relevantDataStore that'll cause us to send the InitializeWebsiteDataStore event below, do we need to send it here as well?
Comment 3 Brady Eidson 2017-05-11 16:17:54 PDT
(In reply to Maureen Daum from comment #2)
> Comment on attachment 309794 [details]
> Patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=309794&action=review
> 
> > Source/WebKit2/UIProcess/WebProcessPool.cpp:526
> > +        m_databaseProcess->send(Messages::DatabaseProcess::InitializeWebsiteDataStore(parameters), 0);
> 
> If there is a relevantDataStore that'll cause us to send the
> InitializeWebsiteDataStore event below, do we need to send it here as well?

Good call - Easy to fall in the trap of sending it twice.

Wouldn't be a big deal, but definitely don't need to do it.
Comment 4 Brady Eidson 2017-05-11 16:26:41 PDT
Created attachment 309815 [details]
Patch
Comment 5 Andy Estes 2017-05-11 16:40:17 PDT
Comment on attachment 309815 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=309815&action=review

> Source/WebKit2/UIProcess/WebProcessPool.cpp:532
> +    auto parameters = relevantDataStore->databaseProcessParameters();

Unnecessary local variable.
Comment 6 Brady Eidson 2017-05-11 16:44:34 PDT
Created attachment 309822 [details]
Patch
Comment 7 WebKit Commit Bot 2017-05-11 17:49:36 PDT
Comment on attachment 309822 [details]
Patch

Clearing flags on attachment: 309822

Committed r216711: <http://trac.webkit.org/changeset/216711>
Comment 8 WebKit Commit Bot 2017-05-11 17:49:38 PDT
All reviewed patches have been landed.  Closing bug.